logs/gsl.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gsl'...
Compiling './lib/python3.5/site-packages/gsl/__init__.py'...
***   File "./lib/python3.5/site-packages/gsl/__init__.py", line 8
    raise ValueError(f"name must be a legal identifier: {name}")
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsl/antlr.py'...
***   File "./lib/python3.5/site-packages/gsl/antlr.py", line 105
    raise ParseCancellationException(f"line {line}:{column} {msg}")
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/gsl/g4v.py'...
***   File "./lib/python3.5/site-packages/gsl/g4v.py", line 24
    raise ValueError(f"Expected visitor in file '{model.name}.g4v', not in'{basename}{ext}'.")
                                                                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gsl/grammar'...
Listing './lib/python3.5/site-packages/gsl-0.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/grammar'...
Listing './share'...
Listing './share/python-wheels'...
